# fyp-phishing-email-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/testing/integration/: artifact_checks.txt  it_stage1_train_log.txt  it_stage2_train_log.txt  it_stage3_train_log.txt
artifacts/testing/regression/: stage1_results_2026-03-09_11-42-41.json  stage2_results_2026-03-09_11-42-41.json  stage3_results_2026-03-09_11-42-41.json
artifacts/testing/system/: system_cli_tests.txt
artifacts/testing/unit/: unit_pytest_output.txt
notebooks/: 001_Train_Evaluation_Metrics_Explained.ipynb  003_Code_Walkthrough_and_CLI_UPDATED.ipynb  004_Train_Evaluation_Metrics_Explained_UPDATED.ipynb  01_Train_Evaluation_Metrics_Explained.ipynb  02_Code_Walkthrough_and_CLI.ipynb  03_Code_Walkthrough_and_CLI_UPDATED.ipynb  05_Evaluation_Cheat_Sheet.ipynb  06_Models_Cheat_Sheet.ipynb  07_Report_Cheat_Sheet.ipynb
src/phishingdet/: cli.py  main.py
src/phishingdet/data/: loader.py  splits.py
src/phishingdet/evaluation/: calibration.py  eval_utils.py  mcnemar.py  model_evaluations.py  plot_curves.py  robustness_mini.py  save_test_preds.py  summarise_errors.py
src/phishingdet/features/: build_features.py  build_metadata_features.py
src/phishingdet/models/: predict.py  predict_hybrid.py  predict_metadata.py  train.py  train_hybrid.py  train_metadata.py
tests/: test_integration_artifacts_exist.py  test_loader.py  test_metadata_features.py  test_negative_dataset_missing.py  test_regression_guard.py  test_reproducible_split.py  test_smoke.py  test_threshold.py
