[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishingdet"
version = "0.1.0"
description = "FYP phishing email detection project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
phishingdet = "phishingdet.cli:main"
